# nix-templates

./: flake.nix  readme.md
.github/workflows/: flake-check.yml
templates/clang/: CMakeLists.txt  flake.nix
templates/go-base/: flake.nix
templates/rust/: .rustfmt.toml  Cargo.toml  flake.nix
templates/rust-base/: flake.nix
templates/trivial/: flake.nix
templates/typescript/: flake.nix
templates/vite-vue-typescript/: flake.nix
